--- a/express/package.json
+++ b/express/package.json
@@ -1,14 +1,20 @@
 {
   "name": "express-test",
   "version": "1.0.0",
+  "engines": {
+    "node": ""
+  },
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nodemon": "^1.18.6",
+    "socket.io": "^1.7.4"
   }
 }
