--- a/express/package.json
+++ b/express/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.6.1",
+    "ejs-locals": "^1.0.2",
     "express": "^4.16.4",
     "nodemon": "^1.18.6",
     "socket.io": "^1.7.4"
