--- a/project/package.json
+++ b/project/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.5.7",
     "ejs-locals": "^1.0.2",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "firebase-admin": "^6.4.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0"
