--- a/heroku-nodejs/package.json
+++ b/heroku-nodejs/package.json
@@ -13,15 +13,16 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ejs": "~2.5.7",
+    "ejs-locals": "^1.0.2",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
+    "firebase": "^5.7.2",
+    "firebase-admin": "^6.4.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
-    "ejs": "~2.5.7",
-    "ejs-locals": "^1.0.2",
-    "express-session": "^1.15.6",
-    "firebase": "^5.7.2",
-    "firebase-admin": "^6.4.0"
+    "npm": "^6.5.0"
   }
 }
