--- a/heroku-nodejs/package.json
+++ b/heroku-nodejs/package.json
@@ -17,6 +17,7 @@
     "ejs-locals": "^1.0.2",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "express-validator": "^5.3.1",
     "firebase": "^5.7.2",
     "firebase-admin": "^6.4.0",
     "http-errors": "~1.6.2",
