--- a/BlogDemo/package.json
+++ b/BlogDemo/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-ejs-extend": "0.0.1",
+    "express-session": "^1.15.6",
     "firebase-admin": "^6.4.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0"
