--- a/BlogDemo/package.json
+++ b/BlogDemo/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "ejs": "~2.5.7",
+    "ejs-lint": "^0.3.0",
     "express": "~4.16.0",
     "express-ejs-extend": "0.0.1",
     "express-session": "^1.15.6",
