--- a/BlogDemo/package.json
+++ b/BlogDemo/package.json
@@ -17,6 +17,8 @@
     "express-session": "^1.15.6",
     "firebase-admin": "^6.4.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "moment": "^2.23.0",
+    "morgan": "~1.9.0",
+    "striptags": "^3.1.1"
   }
 }
