--- a/BlogDemo/package.json
+++ b/BlogDemo/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.0",
     "express-ejs-extend": "0.0.1",
     "express-session": "^1.15.6",
+    "firebase": "^5.7.3",
     "firebase-admin": "^6.4.0",
     "http-errors": "~1.6.2",
     "moment": "^2.23.0",
