--- a/BlogDemo/.env
+++ b/BlogDemo/.env
@@ -11,8 +11,10 @@ FIREBASE_AUTH_PROVIDER_X509_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
 FIREBASE_CLIENT_X509_CERT_URL=https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-wf3uu%40demotest-4eea8.iam.gserviceaccount.com
  
 # Firebase Client
-FIREBASE_API_KEY=
-FIREBASE_AUTH_DOMAIN=
- 
+FIREBASE_API_KEY=AIzaSyBTLe_wrvBO8b_RlQhLqqto6dvykDQDfGE
+FIREBASE_AUTH_DOMAIN=demotest-4eea8.firebaseapp.com
+FIREBASE_STORAGEBUCKET=demotest-4eea8.appspot.com
+FIREBASE_messagingSenderId=26266457222
+
 # Admin UID
 ADMIN_UID=
