--- a/BlogDemo/package.json
+++ b/BlogDemo/package.json
@@ -20,6 +20,7 @@
     "http-errors": "~1.6.2",
     "moment": "^2.23.0",
     "morgan": "~1.9.0",
+    "npm": "^6.5.0",
     "striptags": "^3.1.1"
   }
 }
