--- a/BlogDemo/package.json
+++ b/BlogDemo/package.json
@@ -14,6 +14,7 @@
     "ejs-lint": "^0.3.0",
     "express": "~4.16.0",
     "express-ejs-extend": "0.0.1",
+    "express-fileupload": "^1.1.1-alpha.1",
     "express-session": "^1.15.6",
     "firebase": "^5.7.3",
     "firebase-admin": "^6.5.0",
