--- a/socketDemo/package.json
+++ b/socketDemo/package.json
@@ -12,6 +12,8 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "firebase": "^5.7.3",
+    "firebase-admin": "^6.5.0"
   }
 }
