--- a/socketDemo/package.json
+++ b/socketDemo/package.json
@@ -10,10 +10,11 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "firebase": "^5.7.3",
+    "firebase-admin": "^6.5.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "socket.io": "^2.2.0",
-    "firebase": "^5.7.3",
-    "firebase-admin": "^6.5.0"
+    "npm": "^6.7.0",
+    "socket.io": "^2.2.0"
   }
 }
